Fix spacing issues

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   font-family: "Raleway", sans-serif;
-  padding: 0 20px;
+  padding: 10px 20px;
 
   a {
     text-decoration: none;
