--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -45,7 +45,7 @@
 
 .contact-btn {
   text-align: center;
-  margin-top: 10px;
+  margin-top: 30px;
 
   a {
     background: none;
@@ -246,7 +246,7 @@
     .info {
       position: static;
 
-      img {
+      >img {
         display: none;
       }
 
@@ -316,7 +316,7 @@
     }
 
     .main-img {
-      margin-top: 80px;
+      margin-top: 40px;
 
       img {
         width: 70%;
@@ -338,8 +338,6 @@
     }
 
     .main-img {
-      margin-top: 80px;
-
       img {
         width: 80%;
       }
